src/test/ui/nll/issue-48238.stderr
error: lifetime may not live long enough
  --> $DIR/issue-48238.rs:11:13
   |
LL |     move || use_val(&orig);
   |     ------- ^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
   |     |     |
   |     |     return type of closure is &'2 u8
   |     lifetime `'1` represents this closure's body
   |
   = note: closure implements `Fn`, so references to captured variables can't escape the closure

error: aborting due to previous error

